[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/scripts/debug_info.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/fps_display.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/pause_ui.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/maps/Baseplate.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/debug_info_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/Button.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/JetBrainsMono-Bold.ttf" type="DynamicFontData" id=9]

[sub_resource type="Animation" id=18]
resource_name = "Appear"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("DimOverlay:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DimOverlay:material:shader_param/position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 0.148651, 1 ),
"update": 0,
"values": [ -1.0, 0.25 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GlitchOverlay:material:shader_param/shake_rate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.7 ),
"transitions": PoolRealArray( 0.210224, 1 ),
"update": 0,
"values": [ Vector2( -500, 320 ), Vector2( 100, 320 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DimOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DimOverlay:material:shader_param/position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.05 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GlitchOverlay:material:shader_param/shake_rate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 100, 320 ) ]
}

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform vec4 first_color : hint_color = vec4(1.0);
uniform vec4 second_color : hint_color = vec4(0.0, 0.0, 0.0, 1.0);
uniform float position : hint_range(-1.0, 0.5) = 0.0;
uniform float size : hint_range(0.5, 2) = 0.5;
uniform float angle : hint_range(0.0, 360.0) = 0.0;

void fragment() {
	float pivot = position + 0.5;
	vec2 uv = UV - pivot;
	float rotated = uv.x * cos(radians(angle)) - uv.y * sin(radians(angle)); 
	float pos = smoothstep((1.0 - size) + position, size + 0.0001 + position, rotated + pivot);
	COLOR = mix(first_color, second_color, pos); 
}"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/first_color = Color( 0, 0, 0, 0 )
shader_param/second_color = Color( 0, 0, 0, 1 )
shader_param/position = 0.05
shader_param/size = 1.7
shader_param/angle = 90.0

[sub_resource type="Shader" id=22]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = texture( SCREEN_TEXTURE, fixed_uv );
	pixel_color.r = mix(
		pixel_color.r
	,	texture( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ) ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	texture( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ) ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}"

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 22 )
shader_param/shake_power = 0.05
shader_param/shake_rate = 0.0
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 50.0
shader_param/shake_color_rate = 0.005

[sub_resource type="DynamicFont" id=11]
size = 35
outline_color = Color( 0.0901961, 0.0901961, 0.0901961, 0.505882 )
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 0.6 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 20.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="Game" type="Node"]
pause_mode = 2

[node name="DebugUI" type="CanvasLayer" parent="."]
layer = 3

[node name="DebugInfo" type="Control" parent="DebugUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InfoList" type="VBoxContainer" parent="DebugUI/DebugInfo"]
margin_left = 30.0
margin_top = 22.0
margin_right = 30.0
margin_bottom = 1113.0
mouse_filter = 2
custom_constants/separation = -1

[node name="FPSDisplay" type="Label" parent="DebugUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -107.0
margin_top = 22.0
margin_right = -22.0
margin_bottom = 83.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 0.8 )
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PauseUI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="PauseTransitionPlayer" type="AnimationPlayer" parent="PauseUI"]
playback_speed = 3.0
anims/Appear = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="DimOverlay" type="ColorRect" parent="PauseUI"]
material = SubResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="GlitchOverlay" type="ColorRect" parent="PauseUI"]
material = SubResource( 21 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="VBoxContainer" parent="PauseUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -220.0
margin_right = 400.0
margin_bottom = 220.0
custom_constants/separation = 40
alignment = 1

[node name="ContinueButton" type="Button" parent="PauseUI/Container"]
margin_top = 153.0
margin_right = 300.0
margin_bottom = 200.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
action_mode = 0
text = "Continue"
align = 0

[node name="QuitButton" type="Button" parent="PauseUI/Container"]
margin_top = 240.0
margin_right = 300.0
margin_bottom = 287.0
rect_pivot_offset = Vector2( -405, -125 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
action_mode = 0
text = "Quit"
align = 0

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="Actors" type="Spatial" parent="."]

[node name="Player" parent="Actors" instance=ExtResource( 6 )]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 9.6057, 0 )
__meta__ = {
"_editor_description_": "The main player"
}

[connection signal="pressed" from="PauseUI/Container/ContinueButton" to="PauseUI" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseUI/Container/QuitButton" to="PauseUI" method="_on_QuitButton_pressed"]
